--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       <div class="content">
         <div class="bar">
           <i onclick="cl()" class="fas fa-bars"></i>
-          <ul id="bar">
+          <ul id="bar" class="h0">
+            <button onclick="cl()" class="close">X</button>
             <li><a href="#">Home</a></li>
             <li><a href="#">collection</a></li>
             <li><a href="#">shoes</a></li>
