--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="bar">
           <i onclick="cl()" class="fas fa-bars"></i>
           <ul id="bar" class="h0">
-            <button onclick="cl()" class="close">X</button>
+            <button onclick="cl()">X</button>
             <li><a href="#">Home</a></li>
             <li><a href="#">collection</a></li>
             <li><a href="#">shoes</a></li>
