--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
             <li>
               <a href="#"><i class="fas fa-search"></i></a>
             </li>
-            <li>
+            <li id="ca" onclick="encrm()">
               <a href="#"><i class="fas fa-cart-arrow-down"></i> </a>
+            </li>
+            <li id="num">
+
             </li>
           </ul>
         </div>
